# GL

./: .gitignore  README.md  fragment.glsl  vertex.glsl
HW01/: CMakeLists.txt  main.cpp  shader.h
HW02/: CMakeLists.txt  camera.h  light_shadows_f.glsl  main.cpp  mesh.h  model.h  shader.h
HW02/include/: model.h
HW02/shaders/: light_shadows_f.glsl
HW03/: CMakeLists.txt  camera.h  deferred_shading_fs.glsl  main.cpp  mesh.h  model.h
HW03/include/: light.h  model.h  shader.h
HW03/shaders/: deferred_shading_fs.glsl  g_buffer_fs.glsl  g_buffer_vs.glsl
hw04/: CMakeLists.txt  convolution.cl  main.cpp
hw04/include/: cdf.h  cl.hpp
hw04/shaders/: textures_frag.glsl  textures_vs.glsl
